# ECE4410J-NUUB

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  Dockerfile.cross  LICENSE  README.md
SJTUBeamer/: .gitignore  proposal_slides.tex
apps/envoix-cli/: Cargo.toml
apps/envoix-cli/src/: main.rs
apps/envoix-cli/tests/: cli_loopback.rs
crates/envoix-auth/: Cargo.toml
crates/envoix-auth/src/: lib.rs
crates/envoix-client/src/: lib.rs
crates/envoix-error/: Cargo.toml
crates/envoix-error/src/: lib.rs
crates/envoix-protocol/src/: lib.rs
crates/envoix-session/: Cargo.toml
crates/envoix-session/src/: lib.rs
crates/envoix-storage/: Cargo.toml
crates/envoix-storage/src/: lib.rs
crates/envoix-transfer/: Cargo.toml
crates/envoix-transfer/src/: lib.rs
crates/envoix-transport/: Cargo.toml
crates/envoix-transport-quic/src/: lib.rs
crates/envoix-transport-tcp/: Cargo.toml
crates/envoix-transport-tcp/src/: lib.rs
crates/envoix-transport/src/: lib.rs
crates/envoix-types/src/: lib.rs
docs/: arch.md
