[package]
name = "envoix-transfer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
envoix-crypto.workspace = true
envoix-error.workspace = true
envoix-protocol.workspace = true
envoix-storage.workspace = true
envoix-transport.workspace = true
envoix-types.workspace = true
tokio.workspace = true
